implemented and tested  DELETE /api/posts/{postId}/comments/{commentId} endpoint
Endpoint can be used to delete a given comment
